<resources>
    <string name="change_language_settings">Ubah Pengaturan Bahasa</string>
    <string name="app_name">CupoDraft</string>
    <string name="version">Version 1.0.1</string>
    <string name="notification">Pemberitahuan</string>
    <string name="no_internet">Tidak ditemukan koneksi internet</string>
    <string name="try_again">Coba lagi</string>
    <string name="title_activity_maps">Peta</string>
    <string name="yuk">Yuk!</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">LOGIN</string>
    <string name="masukkan_username_anda">Username</string>
    <string name="masukkan_password_anda">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_transaksi">ID Transaksi</string>
    <string name="tanggal_pinjam">Tanggal Pinjam</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="masukkan_password_lama">Masukkan Password Lama</string>
    <string name="masukkan_password_baru">Masukkan Password Baru</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="ubah_passsword">Ubah Passsword</string>
    <string name="logout">Logout</string>
    <string name="ubah_profile">UBAH PROFILE</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">No HP</string>
    <string name="nama_panjang">Nama Panjang</string>
    <string name="cara_kerja_cupo_cups">Cara Kerja Cupo Cups</string>
    <string name="pesan_minuman">Pesan minuman favorit Anda. Beri tahu staf kafe bahwa Anda adalah pengguna Cupo cup, lalu pindai kode unik pada cup tersebut.</string>
    <string name="anda_akan_menikmati">Anda akan menikmati minuman Anda menggunakan cup kami yang dapat digunakan kembali, yang mana akan dicek melalui akun Anda.</string>
    <string name="selamat_menikmati">Selamat Menikmati</string>
    <string name="kembalikan_cupo">Kembalikan Cupo cup ke kafe yang bekerja sama dengan kami, dan dapatkan cup bersih saat Anda akan memesan lagi.</string>
    <string name="anda_dapat_meminjam">Anda dapat meminjam hingga 2 cangkir sekaligus, jadi jangan khawatir jika Anda lupa membawa cangkir Anda. Keep it clean and Green!</string>
    <string name="order_dan_scan">Order dan Scan</string>
    <string name="lokasi_kafe_terdekat">Lokasi Kafe Terdekat</string>
    <string name="kunjungi_kafe">Kunjungi kafe lokal berkolaborasi dengan Cupo, atau gunakan menu lihat lokasi kafe untuk mencari kafe terdekat.</string>
    <string name="pengembalian">Pengembalian</string>
    <string name="pinjam_tumbler">Pinjam Cupo Cup</string>
    <string name="kembalikan_tumbler">Kembalikan Cupo Cup</string>
    <string name="sayangi_alam">Sayangi alam dengan tidak menyumbang sampah plastik :)</string>
    <string name="kirim">Kirim</string>
    <string name="mengalami_masalah_saat_login">Mengalami masalah saat login?</string>
    <string name="masukkan_username">Masukkan username dan kami akan membawa anda untuk kembali ke akun anda</string>
    <string name="simpan">SIMPAN</string>
    <string name="ubah_password_anda">Ubah Password Anda</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="mohon_ditunggu">Mohon ditunggu, transaksimu sedang kami proses</string>
    <string name="kembali">Kembali</string>
    <string name="tanggal_kembali">Tanggal Kembali</string>
    <string name="status">Status</string>
    <string name="terlambat">Terlambat</string>
    <string name="_0_hari">0 Hari</string>
    <string name="denda">Denda</string>
    <string name="rp_0">Rp. 0</string>
    <string name="berhasil_dikembalikan">Berhasil dikembalikan</string>
    <string name="detail_pengembalian">Detail Pengembalian</string>
    <string name="terimakasih">Terimakasih sudah berkontribusi dalam pengurangan limbah plastik :)</string>
    <string name="nanti_saja">Nanti Saja</string>
    <string name="kembalikan_sekarang">Kembalikan Sekarang</string>
    <string name="tanggal_harus_kembali">Tanggal Harus Kembali</string>
    <string name="detail_peminjaman">Detail Peminjaman</string>
    <string name="jangan_lupa">Jangan Lupa dikembalikan ya :)</string>
    <string name="peminjaman_cup_saya">Peminjaman Cup Saya</string>
    <string name="panduan">Panduan</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="pinjam_atau">Pinjam atau Kembalikan Cupo Cup</string>
    <string name="lihat_lokasi_mitra_cupo">Lihat Lokasi Mitra Cupo</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="buat">Buat</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="transaksi_gagal">Transaksi Gagal</string>
    <string name="mohon_maaf">Mohon maaf, sepertinya ada masalah. Transaksimu tidak dapat kami proses.</string>
    <string name="gagal">Gagal</string>
    <string name="gagal_koneksi">Gagal Koneksi</string>
    <string name="username_atau_">Username atau kata sandi salah!</string>
    <string name="berhasil_login">Berhasil Login</string>
    <string name="nama_tidak_boleh">nama tidak boleh kosong</string>
    <string name="username_tidak">username tidak boleh kosong</string>
    <string name="email_tidak_boleh">email tidak boleh kosong</string>
    <string name="emai_harus">email harus valid</string>
    <string name="no_hp_tidak">no hp tidak boleh kosong</string>
    <string name="password_tidak">password tidak boleh kosong</string>
    <string name="password_harus_sama">password harus sama</string>
    <string name="register_berhasil">Registrasi Berhasil</string>
    <string name="data_produk_berhasil">berhasil get id produk</string>
    <string name="produk_telah_dipinjam">produk ini telah dipinjam :)</string>
    <string name="masukkan_kode">Masukkan Kode Mitra</string>
    <string name="kode_mitra_hanya">Kode Mitra hanya diketahui oleh pihak mitra cupo :)</string>
    <string name="apakah_anda_ingin">Apakah Anda ingin meminjam cup ini?</string>
    <string name="ya">YA</string>
    <string name="batal">BATAL</string>
    <string name="apakah_anda_ingin_mengembalikan">Apakah Anda ingin mengembalikan cup ini?</string>
    <string name="minimal_4">Minimal 4 karakter!</string>
    <string name="update_pass_berhasil">Update Password Berhasil, Silahkan login menggunakan password yang baru:)</string>
    <string name="update_profile_berhasil">Update Profile Berhasil</string>
    <string name="data_wajib_diisi">Data ini wajib diisi!</string>
    <string name="data_tidak_ditemukan">Data tidak ditemukan</string>
    <string name="hari">hari</string>
    <string name="record_transaksi">Record Peminjaman</string>
    <string name="BerhasilLogin">Berhasil Login</string>
    <string name="gagal_memindai_data">Gagal memindai data</string>
    <string name="proses_gagal">Proses pemindai data gagal</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="_0_cup_dipinjam"> Cup Dipinjam</string>
</resources>
