<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_18dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_peminjaman"
            android:icon="@drawable/ic_favorite_border_black_18dp"
            android:title="@string/peminjaman_cup_saya" />
        <item
            android:id="@+id/nav_panduan"
            android:icon="@drawable/ic_help_black_18dp"
            android:title="@string/panduan" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/akun_saya" />
    </group>
</menu>