<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cupodraft.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_peminjaman"
        android:name="com.example.cupodraft.ui.fragment.PeminjamanFragment"
        android:label="@string/record_transaksi"
        tools:layout="@layout/fragment_peminjaman" />

    <activity
        android:id="@+id/nav_panduan"
        android:name="com.example.cupodraft.ui.PanduanActivity"
        android:label="@string/panduan"
        tools:layout="@layout/activity_panduan" />

    <activity
        android:id="@+id/nav_edit"
        android:name="com.example.cupodraft.ui.ProfileActivity"
        android:label="@string/akun_saya"
        tools:layout="@layout/activity_profile" />
</navigation>