<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.PanduanActivity">

    <TextView
        android:id="@+id/title_how"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:text="@string/cara_kerja_cupo_cups"
        android:textColor="#616B26"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ket2a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/pesan_minuman"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@id/guideline12"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ket2" />

    <TextView
        android:id="@+id/ket5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Keep It Green"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ket4a" />

    <TextView
        android:id="@+id/ket3a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/anda_akan_menikmati"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@id/guideline12"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ket3" />

    <TextView
        android:id="@+id/ket3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:text="@string/selamat_menikmati"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ket2a" />

    <TextView
        android:id="@+id/ket4a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/kembalikan_cupo"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@id/guideline12"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ket4" />

    <TextView
        android:id="@+id/ket5a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/anda_dapat_meminjam"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@id/guideline12"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ket5" />

    <TextView
        android:id="@+id/ket2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:text="@string/order_dan_scan"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ket1a" />

    <TextView
        android:id="@+id/ket1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/lokasi_kafe_terdekat"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/title_how" />

    <TextView
        android:id="@+id/ket1a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/kunjungi_kafe"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@id/guideline12"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ket1" />

    <TextView
        android:id="@+id/ket4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/pengembalian"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ket3a" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>